
version 2.14.6 (??/??/????):
	General:
	* Update references to point to our current websites. (RR 766) (Gary
	  Kramlich)
	* Add a donate link to the help menu. (RR 749) (Gary Kramlich)

	Finch:
	* Check pkg-config for ncurses before looking for it manually. (RR 729)
	  (Justin Lecher)

	Pidgin:
	* Replace newlines in topics with spaces. (PIDGIN-16704) (RR 730) (Gary
	  Kramlich)

	libpurple:
	* added support for the no_proxy environment variable. (PIDGIN-17518)
	  (RR #667) (Alynx Zhou and Gary Kramlich)

	XMPP:
	* Enable session management after binding a resource. (PIDGIN-17520) (RR
	  759) (defanor)

	Zephyr:
	* Fix a clang logical-not-parentheses warning. (PIDGIN-17528) (RR 731)
	  (Gary Kramlich)

version 2.14.5 (06/03/2021):
	General:
	* Updated our bundled certificates to the latest version from Mozilla.
	  (RR #722) (PIDGIN-17535) (Gary Kramlich)
	* Made the project scan-build clean. (RR #692-705, #707-714, #716-#719)
	  (Gary Kramlich)
	* Fixed some of Gary's scan-build fixes that were a bit verbose. (RR #715)
	  (Elliott Sales de Andrade)
	* Disabled UPnP and NAT-PMP by default for new user. (RR #706) (Gary
	  Kramlich)

	IRC:
	* Changed the default server to irc.libera.chat. (RR #675) (Gary Kramlich)

	Windows Specific Changes:
	* Fixed the installer not running when Mandatory ASLR was turned on.
	  (RR #721) (PIDGIN-17524) (Gary Kramlich)

version 2.14.4 (04/29/2021):
	General:
	* Use LT_LIB_M to find the math library.  This should simplify things for
	  various distros including the BSD's. (RR #608) (and, Justin Lechner)

	libpurple:
	* Removed a dangling reference to oscar that was causing the unit tests
	  to fail. (RR #605) (Gary Kramlich)
	* Update purple-remote and purple-url-handler to have a Python 3 shebang.
	  (RR #609) (Richard Laager)

	Pidgin:
	* Install our AppData file into the $prefix/share/metainfo. (RR 607)
	  (Lars Wendler)
	* Re-enable the Gevolution plugin and set the evolution-data-server