@@ -61,6 +61,7 @@ libpurple/dbus-types.c
 libpurple/dbus-types.h
 libpurple/example/nullclient
 libpurple/data/gconf/purple.schemas$
+libpurple/fuzzers/fuzz_.*
 libpurple/marshallers.[ch]
 libpurple/plugins/dbus-example-bindings.c
 libpurple/plugins/perl/common/Makefile.PL$
@@ -74,6 +75,7 @@ libpurple/purple-client-example
 libpurple/purple.h$
 libpurple/tests/check_libpurple
 libpurple/tests/libpurple..
+libpurple/tests/test-suite\.log
 libpurple/version.h$
 libpurple/win32/libpurplerc.rc$
 libtool
